# WebApp_DataAnalysis

./: .buildinfo  .gitattributes  .gitignore  README.md  app_streamlit.analyse.html  app_streamlit.html  app_streamlit.load_data.html  app_streamlit.load_data.preprocess.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  searchindex.js  tests.html
.devcontainer/: devcontainer.json
.doctrees/: app_streamlit.analyse.doctree  app_streamlit.doctree  app_streamlit.load_data.doctree  app_streamlit.load_data.preprocess.doctree  environment.pickle  index.doctree  modules.doctree  tests.doctree
.github/workflows/: documentation.yml  python-app.yml
_sources/: app_streamlit.analyse.rst.txt  app_streamlit.load_data.preprocess.rst.txt  app_streamlit.load_data.rst.txt  app_streamlit.rst.txt  index.rst.txt
_static/: documentation_options.js
app_streamlit/: __init__.py  brouillon_visu_recettes.py  contributors_page.py  main_app.py  menu_page.py  profile_page.py  recipes_page.py
app_streamlit/analyse/: classification_values.py  utils.py  visualisation_recettes.py
app_streamlit/load_data/: LoadData.py
app_streamlit/preprocess/: clean_dataframe.py
code/: main.py
code/Preprocess/: Merging.py
code/analyse/: classification_values.py  utils.py
data_files/: df_preprocess.csv
docs/: app_streamlit.analyse.rst  app_streamlit.load_data.preprocess.rst  app_streamlit.load_data.rst  app_streamlit.rst  conf.py  modules.rst  sample.rst
sample/: sample_raw_recipes.csv
tests/: conftest.py  test_preprocess.py  test_utils.py
(+37 files in other folders)
