[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["lildng <lilydaganaudfavre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"

[tool.poetry.dev-dependencies]
pytest = "^8.3"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
