[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["lildng <lilydaganaudfavre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
streamlit = "^1.40.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"

[tool.poetry.dev-dependencies]
pytest = "^8.3"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
