[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["lildng <lilydaganaudfavre@gmail.com> ,sarahgrc <sarah.garcia@epfedu.fr>, candice8976 <candice.bouquin@gmail.com>, InesLalou <ine281101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gdown = "^5.2.0"
matplotlib = "^3.9.3"
numpy = "^2.1.3"
pandas = "^2.2.3"
Pillow = "^11.0.0"
plotly = "^5.24.1"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
streamlit = "^1.40.2"
wordcloud = "^1.9.4"
gdown = "^5.2.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
